# solar

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
config/: Cargo.toml
config/src/: lib.rs
export/: Cargo.toml
export/src/: main.rs  queries.rs
scripts/: create-csv.sh  post-create-command.sh
src/: main.rs
upload/: Cargo.toml
